--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -16,8 +16,8 @@ TERM = "xterm-256color"
 [font]
 size = 20
 
-[font.glyph_offset]
-y = 9
+# [font.glyph_offset]
+# y = 9
 
 [font.normal]
 family = "BlexMono Nerd Font"
@@ -28,8 +28,8 @@ style = "SemiBold"
 family = "BlexMono Nerd Font"
 style = "Text Italic"
 
-[font.offset]
-y = 16
+# [font.offset]
+# y = 16
 
 [scrolling]
 
