--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,6 +1,5 @@
 import = [
   "~/.config/alacritty/themes/themes/gruvbox_material.toml",
-	# "~/.config/alacritty/themes/themes/tokyo-night.toml",
 ]
 
 live_config_reload = true
@@ -17,29 +16,26 @@ TERM = "xterm-256color"
 [font]
 size = 20
 
-# [font.glyph_offset]
-# y = 9
-
 [font.normal]
 family = "BlexMono Nerd Font"
-# style = "Medium"
-style = "SemiBold"
+# style = "SemiBold"
+style = "Regular"
 
 [font.italic]
 family = "BlexMono Nerd Font"
 style = "Text Italic"
 
-# [font.offset]
-# y = 16
+[font.bold]
+family = "BlexMono Nerd Font"
+style = "Bold"
 
 [scrolling]
-
 # auto_scroll = true
 # history = 2000
 
 [window]
 decorations = "buttonless"
-opacity = 0.85
+opacity = 0.9999
 
 [window.dimensions]
 columns = 120
