--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 # use true colors
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # DESIGN TWEAKS
 
@@ -13,6 +13,9 @@ set -g default-terminal "screen-256color"
 # clock mode
 # setw -g clock-mode-colour colour1
 
+# vi mode
+setw -g mode-keys vi
+
 # copy mode
 setw -g mode-style 'fg=colour0 bg=colour8 bold'
 
@@ -20,43 +23,75 @@ setw -g mode-style 'fg=colour0 bg=colour8 bold'
 set -g pane-border-style 'fg=colour1'
 set -g pane-active-border-style 'fg=colour3'
 
-# statusbar
-set -g status-position bottom
+###############
+# STATUS LINE #
+###############
+set-option -g status-left-length 200
+set-option -g status-left " #{session_name}  "
+set-option -g status-right " #{clima} "
+set-option -g status-style "bg=default"
+
+set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags} " 
+set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
+set-option -g window-status-current-style "fg=#e1a345" 
+set-option -g window-status-last-style "fg=#936a2e"
+set-option -g window-status-activity-style none
+
+# set -g status-justify centre
 set -g status-justify left
-set -g status-style 'fg=colour12 bold'
-set -g status-left ''
-set -g status-right '%m-%d %H:%M '
-set -g status-right-length 50
-set -g status-left-length 10
 
-setw -g window-status-current-style 'fg=colour0 bg=color12 dim '
-setw -g window-status-current-format ' #I #W '
+# # statusbar
+# set -g status-position bottom
+# set -g status-justify left
+# set -g status-style 'fg=colour12 bold'
+# set -g status-left ''
+# set -g status-right '%m-%d %H:%M '
+# set -g status-right-length 50
+# set -g status-left-length 10
+#
+# setw -g window-status-current-style 'fg=colour0 bg=color12 dim '
+# setw -g window-status-current-format ' #I #W '
+#
+# setw -g window-status-style 'fg=colour1 dim'
+# setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1] '
+#
+# # setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
+#
+# # messages
+# set -g message-style 'fg=colour2 bg=colour0 bold'
 
-setw -g window-status-style 'fg=colour1 dim'
-setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1] '
-
-# setw -g window-status-bell-style 'fg=colour2 bg=colour1 bold'
-
-# messages
-set -g message-style 'fg=colour2 bg=colour0 bold'
+# tmux can set terminal title
+set -g set-titles on
 
 
 
+###################
+#   KEYBINDINGS   #
+###################
 
+# Ctrl-n, Ctrl-p for next and previous windows
+bind C-p previous-window
+bind C-n next-window
 
+# make next/previous window switching repeatable
+bind -r p previous-window
+bind -r n next-window
 
 # rebind C-a as prefix
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-# vertical split with |
+# vertical split with |. New pane is in current path
 unbind %
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
-# horizontal split with -
+# horizontal split with -. New pane is in current path
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
+
+# new window opens in current path
+bind c new-window -c "#{pane_current_path}"
 
 # refresh config
 unbind r
@@ -74,8 +109,11 @@ bind -r m resize-pane -Z
 set -g base-index 1
 setw -g pane-base-index 1
 
+# auto-rename windows
+set -g allow-rename on
+
 # no delay on esc
-set -sg escape-time 10
+set -sg escape-time 0
 
 # allows mouse interaction
 set -g mouse on
@@ -88,13 +126,36 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection
 
 unbind -T copy-mode-vi MouseDragEnd1Pane
 
+###################
+# 		PLUGINS 		#
+###################
+
 # tpm plugin manager
 set -g @plugin 'tmux-plugins/tpm'
 
 # list of plugins
+# tmux navigator
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# sensible defaults
-# set -g @plugin 'tmux-plugins/tmux-sensible'
+# # catppuccin
+# set -g @plugin 'catppuccin/tmux'
+# set -g @catppuccin_flavor 'latte'
+#
+# set -g @catppuccin_status_left_separator "█"
+# set -g @catppuccin_status_modules_right "application session clima battery"
+# set -g @catppuccin_status_modules_left "null"
+#
+# # sensible defaults
+# # set -g @plugin 'tmux-plugins/tmux-sensible'
+#
+# # tmux weather
+# # set -g @plugin 'xamut/tmux-weather'
+#
+# battery
+# set -g @plugin 'tmux-plugins/tmux-battery'
+#
+# clima
+set -g @plugin 'vascomfnunes/tmux-clima'
+# set -g @clima_use_nerd_font 1
 
 run '~/.config/tmux/plugins/tpm/tpm'
